# azure-python

./: README.md  __pyproject.toml  mypy.toml  pyproject.toml  ruff.toml
.devcontainer/: Dockerfile  devcontainer.json  post-attach.sh
.github/: act_memo.md  settings.yaml  settings.yml
.github/workflows/: docker_build_push_to_ghcrio.yml  test_action.yml
.github/workflows/autobuild_docker_and_push_to_ghcr/: docker_build_and_push_to_ghcrio.yml
.github/workflows/samples/: show_github_contexts.yml
src/python/scripts/: sample.py
