[tool.poetry]
name = "python-poetry-azure"
version = "0.1.0"
description = ""
authors = ["yamakura-yuma"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
boto3 = "^1.34.125"
azure-cli = "^2.61.0"
msgraph-sdk = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
